# TestCodeAgent

./: .gitignore  README.md  makefile
Code/: Cargo.toml  build.rs
Code/job-system-lib/: Job.h  JobSystem.cpp  JobSystem.h  JobWorkerThread.cpp  JobWorkerThread.h  RandomId.cpp  RandomId.h  Types.h  Wrapper.cpp
Code/src/: compiler.rs  files.rs  fs_prompt.rs  git.rs  grammar.pest  main.rs  output.rs  ui.rs
Code/src/ai/: mod.rs  prompts.rs
Code/src/compiler/: mod.rs
Code/src/files/: mod.rs
Code/src/flowscript/: mod.rs
Code/src/flowscript/grammar/: condition.pest
Code/src/flowscript/nodes/: mod.rs
Code/src/flowscript/parser/: conditional.rs  create_error.rs  mod.rs
Code/src/flowscript/transform/: mod.rs
Code/src/fs_prompt/: mod.rs  prompt.txt
Code/src/nodes/: mod.rs
Code/src/output/: mod.rs
Code/src/parser/: conditional.rs  mod.rs
Code/src/system/: job_core.rs  mod.rs  types.rs
Code/src/transform/: mod.rs
