[package]
name = "flowscript"
version = "0.1.0"
build = "build.rs"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
pest = "2.7.5"
pest_derive = "2.7.5"
libc = "0.2"
serde = {version="1.0.192", features = ["derive", "serde_derive"]}
clap = { version = "4.4.8", features = ["derive"] }
serde_json = "1.0.108"
anyhow = "1.0.75"
reqwest = { version = "0.11.22", features = ["blocking"] }
dotenv = "0.15.0"

[build-dependencies]
cc = "1.0"

